// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cm should change 1`] = `
"<printHW4>
  <div>
    <HW4>
      <div>
        身高: 
        <input name=\\"cm\\" value=\\"165\\" onChange={[Function]} />
      </div>
      <div>
        體重: 
        <input name=\\"kg\\" value=\\"\\" onChange={[Function]} />
      </div>
      <button onClick={[Function]}>
        計算!
      </button>
      <div>
        BMI: 
         
      </div>
    </HW4>
  </div>
</printHW4>"
`;

exports[`kg should change 1`] = `
"<printHW4>
  <div>
    <HW4>
      <div>
        身高: 
        <input name=\\"cm\\" value=\\"\\" onChange={[Function]} />
      </div>
      <div>
        體重: 
        <input name=\\"kg\\" value=\\"50\\" onChange={[Function]} />
      </div>
      <button onClick={[Function]}>
        計算!
      </button>
      <div>
        BMI: 
         
      </div>
    </HW4>
  </div>
</printHW4>"
`;

exports[`should HW4 1`] = `
"<printHW4>
  <div>
    <HW4>
      <div>
        身高: 
        <input name=\\"cm\\" value=\\"\\" onChange={[Function]} />
      </div>
      <div>
        體重: 
        <input name=\\"kg\\" value=\\"\\" onChange={[Function]} />
      </div>
      <button onClick={[Function]}>
        計算!
      </button>
      <div>
        BMI: 
         
      </div>
    </HW4>
  </div>
</printHW4>"
`;

exports[`should calculate 1`] = `
"<printHW4>
  <div>
    <HW4>
      <div>
        身高: 
        <input name=\\"cm\\" value=\\"165\\" onChange={[Function]} />
      </div>
      <div>
        體重: 
        <input name=\\"kg\\" value=\\"50\\" onChange={[Function]} />
      </div>
      <button onClick={[Function]}>
        計算!
      </button>
      <div>
        BMI: 
        18.37
         
      </div>
    </HW4>
  </div>
</printHW4>"
`;
